# django-pwned-validator

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.rst  pyproject.toml  setup.py  tox.ini
pwned/: admin.py  app_settings.py  apps.py  backends.py  client.py  models.py  settings.py  validators.py
pwned/migrations/: 0001_initial.py
tests/: fixtures.py  test_backends.py  test_client.py  test_settings.py  test_validators.py
tests/cassettes/: test_count_occurrences_found.yaml  test_count_occurrences_none.yaml  test_login_hit.yaml  test_login_hit_recording_disabled.yaml  test_padding.yaml  test_validator_found.yaml  test_validator_found_logonly.yaml  test_validator_found_no_error.yaml  test_validator_hit.yaml  test_validator_hit_but_under_threshold.yaml  test_validator_hit_no_user_not_recorded.yaml  test_validator_hit_recorded_no_user.yaml  test_validator_hit_recorded_with_user.yaml  test_validator_hit_recording_disabled.yaml  test_validator_not_found.yaml
tests/testproject/: settings.py
