[tool.pytest.ini_options]
addopts = "--ds=tests.testproject.settings"

[tool.poetry]
name = "django-pwned-validator"
version = "0.0.4"
description = "A PwnedPassword validator for Django"
authors = ["Craig Loftus <craigloftus@gmail.com>"]
license = "MIT License"
readme = "README.rst"
packages = [
  {include = "pwned"}
]

[tool.poetry.dependencies]
python = ">=3.6, <4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
django = "^3.2"
pytest = "^6.2.3"
pytest-django = "^4.2.0"
pytest-cov = "^2.11.1"
pytest-vcr = "^1.0.2"
requests-mock = "^1.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
